[package]
name = "rust-tiva-blinky"
version = "0.1.0"
authors = ["Matt Chernosky <mchernosky@syncroness.com>"]
build = "build.rs"

[dependencies.libc_allocator]
path = "lib/libc_allocator"

[profile.dev]
panic = "abort" # Don't unwind on a panic, just abort.

[profile.release]
panic = "abort" # Don't unwind on a panic, just abort.
