[package]
name = "rust-tiva-blinky"
version = "0.1.0"
authors = ["Matt Chernosky <mchernosky@syncroness.com>"]
build = "build.rs"

[build-dependencies]
gcc = "0.3"

[dependencies.libc_allocator]
path = "lib/libc_allocator"

[dependencies.critical_section_arm]
path = "lib/critical_section_arm"

[profile.dev]
panic = "abort" # Don't unwind on a panic, just abort.

[profile.release]
panic = "abort" # Don't unwind on a panic, just abort.
